--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="./Sidebar/Prof/prof.html" onclick="navigateTo('professors')">Professors Offices</a>
         <a href="./Sidebar/Labs/lab.html" onclick="navigateTo('labs')">Labs</a>
         <a href="./Sidebar/Restaurant/restaurant.html" onclick="navigateTo('restaurants')">Restaurants</a>
-        <a href="./Sidebar/Buildings/buildings.html" onclick="navigateTo('buildings')">Buildings</a>
+        <a href="./Buildings/buildings.html" onclick="navigateTo('buildings')">Buildings</a>
     </div>
     
     <div id="maincampuscontent">
@@ -36,7 +36,7 @@
                 <button onclick="location.href='./Sidebar/Restaurant/restaurant.html'" class="home-button">Restaurants</button>
             </div>
             <div class="button-column tall-button">
-                <button onclick="location.href='./Sidebar/Buildings/buildings.html'" class="home-button buildings-button">Buildings</button>
+                <button onclick="location.href='./Buildings/buildings.html'" class="home-button buildings-button">Buildings</button>
             </div>
         </div>
     </div>
