--- a/Buildings/buildings.html
+++ b/Buildings/buildings.html
@@ -26,14 +26,7 @@
         <a href="../../Sidebar/Prof/prof.html" onclick="navigateTo('professors')">Professors Offices</a>
         <a href="../../Sidebar/Labs/lab.html" onclick="navigateTo('labs')">Labs</a>
         <a href="../../Sidebar/restaurant/restaurant.html" onclick="navigateTo('restaurants')">Restaurants</a>
-        <button class="dropdown-btn" onclick="toggleDropdown()">Buildings</button>
-        <div class="dropdown-container" id="buildingDropdown">
-            <a href="../../Buildings/B7/b7.html">B7</a>
-            <a href="../../Buildings/B8/b8.html">B8</a>
-            <a href="../../Buildings/B9/b9.html">B9</a>
-            <a href="../../Buildings/B10/b10.html">B10</a>
-            <a href="../../Buildings/COE/coe.html">COE</a>
-        </div>
+        <a href="./Buildings/buildings.html" onclick="navigateTo('buildings')">Buildings</a>
     </div>
     
     <div class="header-image">
