--- a/Buildings/buildings.html
+++ b/Buildings/buildings.html
@@ -21,7 +21,7 @@
     <button id="menuToggle">&#9776;</button>
     <div id="sidebar" class="sidebar">
         <button class="close-btn" onclick="toggleSidebar()">&times;</button>
-        <a href="./NavEJUST/index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./NavEJUST/Sidebar/Map/map.html" onclick="navigateTo('map')">Map</a>
         <a href="./NavEJUST/Sidebar/Prof/prof.html" onclick="navigateTo('professors')">Professors Offices</a>
         <a href="./NavEJUST/Sidebar/Labs/lab.html" onclick="navigateTo('labs')">Labs</a>
