--- a/Buildings/buildings.html
+++ b/Buildings/buildings.html
@@ -22,10 +22,10 @@
     <div id="sidebar" class="sidebar">
         <button class="close-btn" onclick="toggleSidebar()">&times;</button>
         <a href="../index.html">Home</a>
-        <a href="/NavEJUST/Sidebar/map/map.html" onclick="navigateTo('map')">Map</a>
-        <a href="../Sidebar/Prof/prof.html" onclick="navigateTo('professors')">Professors Offices</a>
-        <a href="../Sidebar/Labs/lab.html" onclick="navigateTo('labs')">Labs</a>
-        <a href="../Sidebar/Restaurant/restaurant.html" onclick="navigateTo('restaurants')">Restaurants</a>
+        <a href="/NavEJUST/Sidebar/Map/map.html" onclick="navigateTo('map')">Map</a>
+        <a href="/NavEJUST/Sidebar/Prof/prof.html" onclick="navigateTo('professors')">Professors Offices</a>
+        <a href="/NavEJUST/Sidebar/Labs/lab.html" onclick="navigateTo('labs')">Labs</a>
+        <a href="/NavEJUST/Sidebar/Restaurant/restaurant.html" onclick="navigateTo('restaurants')">Restaurants</a>
     </div>
     
     <div class="header-image">
