--- a/Buildings/buildings.html
+++ b/Buildings/buildings.html
@@ -4,7 +4,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buildings</title>
+    <link rel="stylesheet" href="stylel.css">
     <style>
 /* Fix the dropdown CSS: */
 .dropdown-container {
@@ -13,8 +15,8 @@
     max-height: 0;
     transition: max-height 0.3s ease-out;
 }
+
     </style>
-     <link rel="stylesheet" href="stylel.css">
 </head>
 <body>
     <!-- Sidebar Menu -->
