--- a/Buildings/B8/b8.html
+++ b/Buildings/B8/b8.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>B8</title>
     <link rel="stylesheet" href="b8.css">
     <style>
