--- a/Sidebar/Prof/prof.html
+++ b/Sidebar/Prof/prof.html
@@ -52,7 +52,7 @@
                   asily locate professors and their offices across the E-JUST campus. This tool is designed to help students, staff, and visitors quickly find where professors are based. Just enter a name in the search bar to get started.
                 </p>
                 </div>
-            <h2>Looking for a specific professor? Use the search bar below to find its location</h2>
+            <h2>Looking for a specific professor? Use the search bar below to find their location</h2>
 <div class="search-container">
     <div class="search-input-group">
         <input type="text" id="professorSearch" placeholder="Search professors...">
