--- a/Sidebar/Restaurant/restaurant.html
+++ b/Sidebar/Restaurant/restaurant.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Resturants</title>
-    <link rel="stylesheet" href="stylep.css">
+    <link rel="stylesheet" href="styler.css">
     <style>
         .dropdown-container {
             display: none;
