--- a/Sidebar/Labs/lab.html
+++ b/Sidebar/Labs/lab.html
@@ -62,7 +62,7 @@
     </div>
     <div class="button-group">
         <button id="searchBtn" class="b8-btn">Search</button>
-        <button id="displayProfessorsBtn" class="b8-btn">Show All Professors</button>
+        <button id="displayProfessorsBtn" class="b8-btn">Show All Labs</button>
     </div>
 </div>
 
