--- a/Sidebar/Restaurant/restaurant.html
+++ b/Sidebar/Restaurant/restaurant.html
@@ -55,7 +55,7 @@
             <h2>Looking for a specific Resturant? Use the search bar below to find its location</h2>
 <div class="search-container">
     <div class="search-input-group">
-        <input type="text" id="professorSearch" placeholder="Search professors...">
+        <input type="text" id="professorSearch" placeholder="Search resturants...">
         <div id="autocompleteResults"></div>
     </div>
     <div class="button-group">
