--- a/Sidebar/Labs/lab.html
+++ b/Sidebar/Labs/lab.html
@@ -57,7 +57,7 @@
             <h2>Looking for a specific lab? Use the search bar below to find its location</h2>
 <div class="search-container">
     <div class="search-input-group">
-        <input type="text" id="professorSearch" placeholder="Search professors...">
+        <input type="text" id="professorSearch" placeholder="Search labs...">
         <div id="autocompleteResults"></div>
     </div>
     <div class="button-group">
