--- a/Buildings/B7/b7.html
+++ b/Buildings/B7/b7.html
@@ -48,7 +48,7 @@
                 <div id="ov">
                 <p>Welcome to B7 !!
                     <br>
-                    The B8 building is the central hub for the Faculty of Engineering at E-JUST, featuring lecture halls, modern labs, and faculty offices. It supports hands-on learning and research in fields
+                     The B7 building is one of the main operating buildings at EJUST, which hosts a lot of diffrent classes from multiple faculties and contians high quality advanced labs related different the electrical engineering fields
                     <br>
                     <b>Opening Hours:</b> Sunday to Thursday, 9:00 AM – 3:45 PM
                 </p>
