--- a/Buildings/B9/b9.html
+++ b/Buildings/B9/b9.html
@@ -48,7 +48,7 @@
                 <div id="ov">
                 <p>Welcome to B9 !!
                     <br>
-                    The B8 building is the central hub for the Faculty of Engineering at E-JUST, featuring lecture halls, modern labs, and faculty offices. It supports hands-on learning and research in fields
+                   The B9 building is one of the main buildings in operating buildings at EJUST, which haots diffrent classes for diffrent faculties and contain some advanced labs that EJUST is knwon for in diffrent the chemical engineering fields
                     <br>
                     <b>Opening Hours:</b> Sunday to Thursday, 9:00 AM – 3:45 PM
                 </p>
