--- a/Buildings/B10/b10.html
+++ b/Buildings/B10/b10.html
@@ -48,7 +48,7 @@
                 <div id="ov">
                 <p>Welcome to B10 !!
                     <br>
-                    The B8 building is the central hub for the Faculty of Engineering at E-JUST, featuring lecture halls, modern labs, and faculty offices. It supports hands-on learning and research in fields
+                   The B10 building is one of the main operating buildings at EJUST, which hosts a lot of diffrent classes from multiple faculties and contians high quality advanced labs related different the engineering and pharmaceutical fields
                     <br>
                     <b>Opening Hours:</b> Sunday to Thursday, 9:00 AM – 3:45 PM
                 </p>
