--- a/Buildings/B8/b8.html
+++ b/Buildings/B8/b8.html
@@ -69,7 +69,7 @@
                             <img src="images/b8-ground.jpg" alt="B8 Ground Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>Ground Floor</h3>
-                                <p>Key facilities: Main Entrance, Lecture Halls, Student Services</p>
+                                <p>Key facilities: Multiple Machining labs, TA and professors' officie, lecture halls </p>
                             </div>
                         </div>
                         
@@ -77,7 +77,7 @@
                             <img src="images/b8-first.jpg" alt="B8 First Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>First Floor</h3>
-                                <p>Key facilities: Faculty Offices, Conference Rooms</p>
+                                <p>Key facilities: Multiple lecture halls, section classrooms, labs</p>
                             </div>
                         </div>
                         
@@ -85,7 +85,7 @@
                             <img src="images/b8-second.jpg" alt="B8 Second Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>Second Floor</h3>
-                                <p>Key facilities: Research Labs, Graduate Student Areas</p>
+                                <p>Key facilities: Professors' offices,Roof top</p>
                             </div>
                         </div>
                     </div>
