--- a/Buildings/COE/coe.html
+++ b/Buildings/COE/coe.html
@@ -38,6 +38,8 @@
         <div class="fade"></div>
     </div>
     <h1 class="page-title">COE (Center Of Excellence)</h1>
+     <P>One of the main buildings and entire EJUST main campus and is considered the most important building as it contain one of the top most advanced maps at EJUST and across the Middle east, and hosting the Ahmed EL-Gohary complex for Research Excellence</P>
+     <br>
                   <!-- Floor Plans Section -->
                 <h2>Floor Plans</h2>
                 <div class="floor-section">
@@ -53,7 +55,7 @@
                             <img src="images/b8-ground.jpg" alt="COE Ground Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>Ground Floor</h3>
-                                <p>Key facilities: Main Entrance, Lecture Halls, Student Services</p>
+                                <p>Key facilities: Basic applied sciences labs, Engineering labs, show room , inner hallway </p>
                             </div>
                         </div>
                         
@@ -61,7 +63,7 @@
                             <img src="images/b8-first.jpg" alt="COE First Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>First Floor</h3>
-                                <p>Key facilities: Faculty Offices, Conference Rooms</p>
+                                <p>Key facilities: Basic applied sciences labs, sections classrooms </p>
                             </div>
                         </div>
                         
@@ -69,14 +71,14 @@
                             <img src="images/b8-second.jpg" alt="COE Second Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>Second Floor</h3>
-                                <p>Key facilities: Research Labs, Graduate Student Areas</p>
+                                <p>Key facilities: Research Labs,Roof top </p>
                             </div>
                         </div>
                          <div id="third-floor" class="floor-map">
                             <img src="images/b8-first.jpg" alt="COE Third Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>Third Floor</h3>
-                                <p>Key facilities: Faculty Offices, Conference Rooms</p>
+                                <p>Key facilities: Research labs</p>
                             </div>
                         </div>
                     </div>
