--- a/Buildings/COE/coe.html
+++ b/Buildings/COE/coe.html
@@ -38,6 +38,7 @@
         <div class="fade"></div>
     </div>
     <h1 class="page-title">COE (Center Of Excellence)</h1>
+     <h2>Overview</h2>
      <P>One of the main buildings and entire EJUST main campus and is considered the most important building as it contain one of the top most advanced maps at EJUST and across the Middle east, and hosting the Ahmed EL-Gohary complex for Research Excellence</P>
      <br>
                   <!-- Floor Plans Section -->
