--- a/Buildings/B9/b9.html
+++ b/Buildings/B9/b9.html
@@ -67,7 +67,7 @@
                             <img src="images/b8-ground.jpg" alt="B9 Ground Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>Ground Floor</h3>
-                                <p>Key facilities: Main Entrance, Lecture Halls, Student Services</p>
+                                <p>Key facilities: Multiple labs, TA and professors' officie, lecture halls</p>
                             </div>
                         </div>
                         
@@ -75,7 +75,7 @@
                             <img src="images/b8-first.jpg" alt="B9 First Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>First Floor</h3>
-                                <p>Key facilities: Faculty Offices, Conference Rooms</p>
+                                <p>Key facilities:  Multiple lecture halls, section classrooms, labs</p>
                             </div>
                         </div>
                         
@@ -83,7 +83,7 @@
                             <img src="images/b8-second.jpg" alt="B9 Second Floor" class="floor-image">
                             <div class="floor-info">
                                 <h3>Second Floor</h3>
-                                <p>Key facilities: Research Labs, Graduate Student Areas</p>
+                                <p>Key facilities:Professors' offices,Roof top</p>
                             </div>
                         </div>
                     </div>
